@@ -8,6 +8,7 @@
 6. Put more pace between arrows on combos if using V arrows.
 7. Add option to use darkened background colour for menuitem selection.
 8. Add 'fade' to menuitem appearance.
+9. Add new scrollbar type - oxygen.
 
 0.59.7
 ------
